<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_medium"
            android:gravity="center">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:src="@drawable/avatar"/>

            <TextView
                style="@style/TextAppearance.Posip.Headline.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_name" />

            <TextView
                style="@style/TextAppearance.Posip.Tagline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_email"/>

            <TextView
                style="@style/TextAppearance.Posip.Tagline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_tel"/>

            <View style="@style/Widget.Posip.Line" />

            <TextView
                style="@style/TextAppearance.Posip.Tagline.Bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_label" />

            <TextView
                style="@style/TextAppearance.Posip.Content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample_about" />

            <View style="@style/Widget.Posip.Line" />

            <TextView
                style="@style/TextAppearance.Posip.Tagline.Bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/experience_skill_label" />

            <TextView
                style="@style/TextAppearance.Posip.Content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample_exp_skill" />

            <View style="@style/Widget.Posip.Line" />

            <TextView
                style="@style/TextAppearance.Posip.Tagline.Bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/education_label" />

            <TextView
                style="@style/TextAppearance.Posip.Content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample_education" />

            <View style="@style/Widget.Posip.Line" />

            <TextView
                style="@style/TextAppearance.Posip.Tagline.Bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/courses_label" />

            <TextView
                style="@style/TextAppearance.Posip.Content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sample_courses" />

            <View style="@style/Widget.Posip.Line" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/enroll_chemistry_button"
                style="@style/Widget.Posip.Button.Filled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enroll_on_chemistry" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/enroll_maths_button"
                style="@style/Widget.Posip.Button.Filled"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enroll_on_maths" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>