<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_medium"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/avatar"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/avatar"
            android:background="@android:color/transparent"
            android:layout_marginEnd="@dimen/margin_normal"/>

        <TextView
            android:id="@+id/tutor_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:fontFamily="@font/bold"
            android:text="@string/sample_name"
            android:background="@android:color/transparent"
            android:layout_toEndOf="@id/avatar"/>

        <TextView
            android:id="@+id/field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:fontFamily="@font/regular"
            android:text="@string/sample_student_home_field"
            android:layout_below="@id/tutor_name"
            android:layout_toEndOf="@id/avatar"
            android:background="@android:color/transparent"
            android:layout_marginBottom="@dimen/margin_extra_small"/>

        <ImageView
            android:id="@+id/star1"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/star"
            android:contentDescription="@string/star"
            android:layout_below="@id/field"
            android:background="@android:color/transparent"
            android:layout_toEndOf="@id/avatar"/>

        <ImageView
            android:id="@+id/star2"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/star"
            android:contentDescription="@string/star"
            android:layout_below="@id/field"
            android:background="@android:color/transparent"
            android:layout_toEndOf="@id/star1"/>

        <ImageView
            android:id="@+id/star3"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/star"
            android:contentDescription="@string/star"
            android:layout_below="@id/field"
            android:background="@android:color/transparent"
            android:layout_toEndOf="@id/star2"/>

        <ImageView
            android:id="@+id/star4"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/star"
            android:contentDescription="@string/star"
            android:layout_below="@id/field"
            android:background="@android:color/transparent"
            android:layout_toEndOf="@id/star3"/>

        <ImageView
            android:id="@+id/star5"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/star"
            android:contentDescription="@string/star"
            android:layout_below="@id/field"
            android:background="@android:color/transparent"
            android:layout_toEndOf="@id/star4"/>

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:fontFamily="@font/regular"
            android:text="@string/sample_time"
            android:layout_below="@id/field"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:layout_marginBottom="@dimen/margin_extra_small"/>
    </RelativeLayout>
</layout>