<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

        <LinearLayout
            android:id="@+id/no_tutor_msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_gravity="center"
            android:padding="@dimen/padding_medium"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@drawable/learn"
                android:contentDescription="@string/learn"/>

            <TextView
                android:id="@+id/msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:fontFamily="@font/regular"/>
        </LinearLayout>

        <com.github.clans.fab.FloatingActionMenu
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:background="@android:color/transparent"
            app:menu_fab_size="normal"
            app:menu_icon="@drawable/ic_arrow_up"
            app:menu_colorNormal="@color/colorPrimary"
            app:menu_colorPressed="@color/colorPrimaryLight">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/search_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_search"
                app:fab_size="mini"
                app:fab_label="@string/search_label"
                app:fab_colorNormal="@color/colorPrimary"
                app:fab_colorPressed="@color/colorPrimaryLight"/>

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/sign_out_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_logout"
                app:fab_size="mini"
                app:fab_label="@string/sing_out_label"
                app:fab_colorNormal="@color/colorPrimary"
                app:fab_colorPressed="@color/colorPrimaryLight"/>
        </com.github.clans.fab.FloatingActionMenu>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>